# silkyway

./: .env.sample  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  GROUND_TRUTH.md  MANIFESTO.md  README.md  ROADMAP.md  SETUP.md
anchor/: .gitignore
apps/app/: ENV_SETUP.md  next.config.ts  package-lock.json  package.json
apps/backend/: .env.sample  jest.config.js  nest-cli.json  package.json
apps/silk/: .env.sample
content/: index.md  skill.md
docs/: roadmap.md  sdk-migration-summary.md
docs/completed/: 03-sdk-account-commands.md  04-frontend-setup-page.md  05-agent-chat-interface-design.md  2026-02-07-handshake-sdk-plan.md  2026-02-10-account-dashboard-design.md  2026-02-10-account-dashboard-impl.md  2026-02-10-agent-chat-interface.md  claiming.md
docs/design/: SETUP.md  intent-engine.md  intent-framework.md  multi-cluster.md  tx-verification.md
docs/guides/: transactions.md
docs/plans/: 2026-02-06-decline-transfer-design.md  2026-03-14T10-38-test-file.md
programs/handshake/: Cargo.toml
programs/handshake/src/: errors.rs  lib.rs
programs/handshake/src/instructions/: claim_transfer.rs  expire_transfer.rs  mod.rs  reject_transfer.rs
programs/handshake/src/state/: secure_transfer.rs
public/: SKILL.md
public-docs/: AGENTS.md  custom.css  docs.json  index.mdx
public-docs/api-reference/: introduction.mdx
public-docs/guides/: glossary.mdx  how-it-works.mdx  quickstart.mdx
public-docs/sdk/: introduction.mdx  quickstart.mdx
scripts/: create-pool.ts
src/: app.module.ts
src/api/: api.module.ts
src/solana/: handshake-client.ts  solana.service.ts
(+86 files in other folders)
